fixing quiz buttons overflow bug

--- a/src/app/review-dialogs/dialog-content-quiz/dialog-content-quiz-dialog.component.css
+++ b/src/app/review-dialogs/dialog-content-quiz/dialog-content-quiz-dialog.component.css
@@ -5,6 +5,14 @@ h3 {
   font-weight: bold;
 }
 
+button {
+  border: none;
+  border-radius: 4px;
+  height: 70px;
+  line-height: 20px;
+  white-space: normal;
+}
+
 ul {
   list-style-type: none;
   padding-left: 0;
